k8s/mikrostoritev-za-izdelke-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mikrostoritev-za-izdelke-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mikrostoritev-za-izdelke
  template:
    metadata:
      labels:
        app: mikrostoritev-za-izdelke
    spec:
      containers:
        - image: zk0821docker/mikrostoritev-za-izdelke:2022-12-04-03-55-30
          name: mikrostoritev-za-izdelke
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
              httpGet:
                path: /health/ready
                port: server
              initialDelaySeconds: 20
              periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: mikrostoritev-za-izdelke
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: mikrostoritev-za-izdelke
