k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rso-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /mikrostoritev-za-izdelke(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mikrostoritev-za-izdelke
                port:
                  number: 8080
          - path: /mikrostoritev-za-kosarice(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mikrostoritev-za-kosarice
                port:
                  number: 8081
          - path: /mikrostoritev-za-frontend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mikrostoritev-za-frontend
                port:
                  number: 80
